--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.7",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.7",
+    "@angular-devkit/build-angular": "^19.2.5",
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.0",
     "@types/express": "^4.17.17",
